--- a/src/app/module/cowin-center/search-cowin-center/search-cowin-center.component.html
+++ b/src/app/module/cowin-center/search-cowin-center/search-cowin-center.component.html
@@ -1,3 +1,26 @@
-<button mat-icon-button color="primary" aria-label="Example icon button with a home icon">
-    <!-- <mat-icon>search</mat-icon> -->
-</button>
+<mat-card class="example-card">
+    <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+    <mat-card-content>
+        <p>
+            Please click search after entring pin code of your are to find available cowin vac center near you.
+        </p>
+    </mat-card-content>
+    <mat-card-actions>
+        <mat-form-field class="example-form-field">
+            <mat-label>Pin Code:</mat-label>
+            <input matInput type="text" [(ngModel)]="pinCode">
+            <button mat-button *ngIf="pinCode" matSuffix mat-icon-button aria-label="Clear" (click)="pinCode=0">
+              <mat-icon>close</mat-icon>
+            </button>
+          </mat-form-field>
+          
+        <button mat-icon-button color="primary" aria-label="Search for cowin vaccine center" (click)='findAvailableCowinVacCenter()' [disabled]='searchButtonFlag'>
+            <mat-icon>search</mat-icon>
+        </button>
+    </mat-card-actions>
+</mat-card>
